-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.9.2
-
Component/s: Erlang - Compiler, Erlang - Library
-
Labels:
the erlang backend generates records to represent structs. instead of the unique sequential id they use the struct field name as the record keys. records in erlang do not support repeated keys so generated erlang modules do not compile
the most obvious fix is to refuse to generate code from structs with repeated keys but this means the erlang backend is not capable of handling all valid structs
the easiest fix is to switch structs to use the unique sequential ids as the keys of the record but this breaks backwards compatibility and probably necessitates generating helper functions to retrieve fields by name
also possible is switching to an erlang data structure that supports repeated keys but this would also require breaking backwards compatibility