THRIFT-2628 erlang: struct member name conflicts due to lowercased names

client: erlang
patch: talentdeficit (alisdair sullivan)

preserve case in generated field names (via erlang 'atom' form)